k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gabi-api
  namespace: gabi
  labels:
    app: gabi-api
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: http
    protocol: TCP
  - port: 9090
    targetPort: 9090
    name: metrics
    protocol: TCP
  selector:
    app: gabi-api
    component: api
